
name: list-state
version: 0.0.2
cabal-version: -any
build-type: Simple
license: GPL
license-file: LICENSE
copyright: (c) 2011 Karl Voelker
build-depends: base >= 3 && < 5, containers -any, mtl -any
stability: unstable
maintainer: Karl Voelker <ktvoelker@gmail.com>
synopsis: A combined list and state monad
description: ListState is a monad which acts like both the list and state
  monads. The state is independent on each branch of the list computation.
homepage: https://github.com/ktvoelker/list-state
author: Karl Voelker <ktvoelker@gmail.com>
hs-source-dirs: src
exposed-modules: Control.Monad.ListState
category: Monads
